# codex

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  todo
shaders/: foliage_canopy.frag  foliage_canopy.vert  foliage_canopy_generate.comp  foliage_common.glsl  foliage_generate.comp  foliage_imposter.frag  foliage_imposter.vert  foliage_imposter_depth_prepass.frag  heightmap_generate.comp  line.frag  line.vert  nearby_foliage.frag  nearby_foliage.vert  nearby_foliage_decode.comp  nearby_foliage_depth_prepass.frag  quadtree_mesh.frag  quadtree_mesh.vert  quadtree_mesh_bridge.vert  skybox.frag  skybox.vert  triangle.frag  triangle.vert  water_build_maps.comp  water_fft_stage.comp  water_initialize_spectrum.comp  water_mesh.frag  water_mesh.vert  water_mesh_bridge.vert  water_spectrum_update.comp  world_text.frag  world_text.vert
src/: App.cpp  App.hpp  AppConfig.hpp  AppPanels.cpp  AppPanels.hpp  CameraManager.cpp  CameraManager.hpp  EngineRendererBase.cpp  EngineRendererBase.hpp  FoliageCanopyRenderer.cpp  FoliageCanopyRenderer.hpp  FoliageImposterRenderer.cpp  FoliageImposterRenderer.hpp  FoliageTypes.hpp  FreeFlightCameraController.cpp  FreeFlightCameraController.hpp  GamepadInput.cpp  GamepadInput.hpp  Gameplay.cpp  Gameplay.hpp  HeightmapNoiseGenerator.cpp  HeightmapNoiseGenerator.hpp  LightingSystem.cpp  LightingSystem.hpp  LineRenderer.cpp  LineRenderer.hpp  NearbyFoliageRenderer.cpp  NearbyFoliageRenderer.hpp  PerfPanel.cpp  PerfPanel.hpp  PerformanceCapture.cpp  PerformanceCapture.hpp  Position.hpp  QuadtreeMeshRenderer.cpp  QuadtreeMeshRenderer.hpp  QuadtreeSanityTests.cpp  QuadtreeWaterMeshRenderer.cpp  QuadtreeWaterMeshRenderer.hpp  RenderEngines.hpp  RenderTypes.hpp  (+26 more)
src/assets/: RuntimeAssetCompression.cpp  RuntimeAssetCompression.hpp  RuntimeAssetFormat.hpp  RuntimeAssetReader.cpp  RuntimeAssetReader.hpp
src/platform/: SteamService.cpp  SteamService.hpp
steam_input/: steam_input_manifest.vdf  terrain_generic_controller.vdf  terrain_xbox360_controller.vdf  terrain_xbox_controller.vdf
tools/: build.cmd  configure.cmd
tools/converter/: AssetBinWriter.cpp  AssetBinWriter.hpp  BcTextureCompression.cpp  BcTextureCompression.hpp  CMakeLists.txt  CompressonatorBcCodec.cpp  CompressonatorBcCodec.hpp  ConverterMain.cpp  FbxImport.cpp  FbxImport.hpp  FontMsdfConverter.cpp  FontMsdfConverter.hpp  MeshBinWriter.cpp  MeshBinWriter.hpp  PineImposterGenerator.cpp  PineImposterGenerator.hpp  PineTreePackConverter.cpp  PineTreePackConverter.hpp  README.md  TexBinWriter.cpp  TexBinWriter.hpp  TextureImport.cpp  TextureImport.hpp
tools/converter/shaders/: pine_imposter_capture.vert  pine_imposter_capture_color.frag  pine_imposter_capture_normal.frag
